# FutureKingsMentoringCataloging

./: .gitignore  AGENTS.md  Dockerfile.vector-search  README.md  app.py  app_types.py  checkpoint.py  column_helpers.py  configuration.py  docker-compose.yml  excel_maker.py  generators.py  llm_work.py  main.py  microsoft.py  presentation_reader.py  pyproject.toml
catalog_app/: app_types.py  catalog_sync.py  settings.py
catalog_app/db/: catalog.py  connection.py  schema.py
catalog_app/static/: app.js
excel_generation/: app_types.py  checkpoint.py  delta_state.py  excel_maker.py  main.py  workbook_rows.py
excel_generation/microsoft/: graph.py
microsoft/: __init__.py  auth.py  graph.py  types.py
vector_search_app/: __init__.py  api.py  cli.py  db.py  embeddings.py  excel_loader.py  models.py  service.py  settings.py  types.py
vector_search_app/static/: app.js  index.html  styles.css
